--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -3,53 +3,53 @@
 <html>
 
 <head>
-        <title>Fri3ndFind3r B3ta</title>
+    <title>Fri3ndFind3r B3ta</title>
     <meta charset="UTF-8">
     <!-- materialize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <!--Import Google Icon Font materialize icons-->
-	<link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Including Font Awesome Icons -->
-	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
-       <!-- jQuery -->
+    <script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-    
+
 </head>
 
 <body>
-        <nav>
-                <div class="navbar navbar-light" style="background-color:teal">
-                    <i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
-                    <a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
-                    <ul class="right hide-on-med-and-down" id="head-nav-links">
-                        <li><a href="./survey">Survey</a></li>
-                        <li><a href="/api/friends">API Friends List</a></li>
-                        <li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
-                    </ul>
+    <nav>
+        <div class="navbar navbar-light" style="background-color:teal">
+            <i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
+            <a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
+            <ul class="right hide-on-med-and-down" id="head-nav-links">
+                <li><a href="./survey">Survey</a></li>
+                <li><a href="/api/friends">API Friends List</a></li>
+                <li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="col s12 m7">
+        <h2 class="header">Easy to Get Matched</h2>
+        <div class="card horizontal">
+            <div class="card-image">
+                <img src="assets/images.PNG">
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>You are very close to hitting your match</p>
                 </div>
-            </nav>
-            <div class="col s12 m7">
-                <h2 class="header">Easy to Get Matched</h2>
-                <div class="card horizontal">
-                    <div class="card-image">
-                        <img src="assets/images.PNG">
-                    </div>
-                    <div class="card-stacked">
-                        <div class="card-content">
-                            <p>You are very close to hitting your match</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="https://kevinmotanya.github.io/Responsive-Portfolio/">Feedback</a>
-                        </div>
-                    </div>
+                <div class="card-action">
+                    <a href="https://kevinmotanya.github.io/Responsive-Portfolio/">Feedback</a>
                 </div>
             </div>
+        </div>
+    </div>
     <div class='container'>
-            <div class="card panel col s12 z-depth-5 ">
+        <div class="card panel col s12 z-depth-5 ">
             <h2><strong>Survey Questions</strong></h2>
             <div class='card-panel left-align white'>
                 <h4><strong>About You</strong></h4>
@@ -59,7 +59,7 @@
                 <input id="photo" type="text" class="validate" required>
                 <label class='active' for="name">Link to Photo Image (required)</label>
                 <h3>I</h3>
-					<h5>You learned about financial planning from your parent(s).</h5>
+                <h5>You learned about financial planning from your parent(s).</h5>
                 <select data-placeholder="" class="browser-default" id="q1">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
@@ -69,7 +69,7 @@
                     <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>II</h3>
-					<h5>You believe in a solid marriage and family values.</h5>
+                <h5>You believe in a solid marriage and family values.</h5>
                 <select data-placeholder="" class="browser-default" id="q2">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
@@ -79,24 +79,24 @@
                     <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>III</h3>
-					<h5>You get along with people's relatives and their friends.</h5>
+                <h5>You get along with people's relatives and their friends.</h5>
                 <select data-placeholder="" class="browser-default" id="q3">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
-						<option value="2">2 (Disagree)</option>
-						<option value="3">3 (Fairly yes)</option>
-						<option value="4">4 (Agree)</option>
-						<option value="5">5 (Totally agree)</option>
+                    <option value="2">2 (Disagree)</option>
+                    <option value="3">3 (Fairly yes)</option>
+                    <option value="4">4 (Agree)</option>
+                    <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>IV</h3>
-					<h5>You are not scared of heights.</h5>
+                <h5>You are not scared of heights.</h5>
                 <select data-placeholder="" class="browser-default" id="q4">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
-						<option value="2">2 (Disagree)</option>
-						<option value="3">3 (Fairly yes)</option>
-						<option value="4">4 (Agree)</option>
-						<option value="5">5 (Totally agree)</option>
+                    <option value="2">2 (Disagree)</option>
+                    <option value="3">3 (Fairly yes)</option>
+                    <option value="4">4 (Agree)</option>
+                    <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>V</h3>
                 <h5>You don't mind about insensitive jokes as long as they are funny.</h5>
@@ -113,20 +113,20 @@
                 <select data-placeholder="" class="browser-default" id="q6">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
-						<option value="2">2 (Disagree)</option>
-						<option value="3">3 (Fairly yes)</option>
-						<option value="4">4 (Agree)</option>
-						<option value="5">5 (Totally agree)</option>
+                    <option value="2">2 (Disagree)</option>
+                    <option value="3">3 (Fairly yes)</option>
+                    <option value="4">4 (Agree)</option>
+                    <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>VII</h3>
-					<h5>Are you photogenic?</h5>
+                <h5>Are you photogenic?</h5>
                 <select data-placeholder="" class="browser-default" id="q7">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
-						<option value="2">2 (Disagree)</option>
-						<option value="3">3 (Fairly yes)</option>
-						<option value="4">4 (Agree)</option>
-						<option value="5">5 (Totally agree)</option>
+                    <option value="2">2 (Disagree)</option>
+                    <option value="3">3 (Fairly yes)</option>
+                    <option value="4">4 (Agree)</option>
+                    <option value="5">5 (Totally agree)</option>
                 </select>
                 <h3>VIII</h3>
                 <h5>You were a bookworm in high school</h5>
@@ -153,120 +153,121 @@
                 <select data-placeholder="" class="browser-default" id="q10">
                     <option value="">Pick your answer</option>
                     <option value="1">1 (Totally Disagree)</option>
-						<option value="2">2 (Disagree)</option>
-						<option value="3">3 (Fairly yes)</option>
-						<option value="4">4 (Agree)</option>
-						<option value="5">5 (Totally agree)</option>
+                    <option value="2">2 (Disagree)</option>
+                    <option value="3">3 (Fairly yes)</option>
+                    <option value="4">4 (Agree)</option>
+                    <option value="5">5 (Totally agree)</option>
                 </select>
                 <br>
                 <!-- Materialize Modal Trigger/Submit Button -->
-                <button type ="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger cyan lighten-1" id="submitBtn">Submit</button>
+                <button type="submit" data-target="modal1" class="waves-effect waves-light btn modal-trigger cyan lighten-1"
+                    id="submitBtn">Submit</button>
             </div>
         </div>
-        
+
 
         <!-- Materialize Modal Structure -->
         <div id="modal1" class="modal">
-          <div class="modal-content">
-            <h4>Here's your Friend</h4>
-            <h5 id="matchName"></h5>
-            <img id="matchPic" src="" alt="No Image" width = 248px>
-          </div>
-        <div class="modal-footer">
-          <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Amigo</a>
+            <div class="modal-content">
+                <h4>Here's your Friend</h4>
+                <h5 id="matchName"></h5>
+                <img id="matchPic" src="" alt="No Image" width=248px>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Amigo</a>
+            </div>
         </div>
-      </div>
 
     </div>
 
-<!-- Grabs information and sends it to server -->
-<script type="text/javascript">
-$(document).ready(function() {
-    $("#submitBtn").on("click", function() {
-        //form validation
-        function validateForm() {
-            var isValid = true;
-            $('.validate').each(function() {
-                if ($(this).val() === ''){
-                    isValid = false;
+    <!-- Grabs information and sends it to server -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#submitBtn").on("click", function () {
+                //form validation
+                function validateForm() {
+                    var isValid = true;
+                    $('.validate').each(function () {
+                        if ($(this).val() === '') {
+                            isValid = false;
+                        }
+                    });
+
+                    $('.browser-default').each(function () {
+                        if ($(this).val() === "") {
+                            isValid = false;
+                        }
+                    });
+
+                    return isValid;
                 }
-            });
 
-            $('.browser-default').each(function() {
-                if ($(this).val() === ""){
-                    isValid = false;
+                //if everything is filled
+                if (validateForm() == true) {
+                    //creates a new friend from the values submitted
+                    var newFriend = {
+                        name: $('#name').val().trim(),
+                        profilePic: $('#photo').val().trim(),
+                        scores: [
+                            $('#q1').val(),
+                            $('#q2').val(),
+                            $('#q3').val(),
+                            $('#q4').val(),
+                            $('#q5').val(),
+                            $('#q6').val(),
+                            $('#q7').val(),
+                            $('#q8').val(),
+                            $('#q9').val(),
+                            $('#q10').val(),
+                        ]
+                    };
+
+                    //Grabs current URL of website
+                    var currentURL = window.location.origin;
+
+                    //AJAX posts the data to friends API.
+                    $.post(currentURL + "/api/friends", newFriend, function (data) {
+                        //Grab the result from the AJAX post so that the best match's name and photo are displayed.
+                        $("#matchName").text(data.name);
+                        $("#matchPic").attr("src", data.profilePic);
+
+                    });
+                    // Show the modal with the best match
+                    $('.modal').modal();
+
+                    //clear form after submission
+                    $('#name').val("");
+                    $('#photo').val("");
+                    $('#q1').val("");
+                    $('#q2').val("");
+                    $('#q3').val("");
+                    $('#q4').val("");
+                    $('#q5').val("");
+                    $('#q6').val("");
+                    $('#q7').val("");
+                    $('#q8').val("");
+                    $('#q9').val("");
+                    $('#q10').val("");
+                } else {
+                    alert("Please fill out ALL fields before submitting survey!")
                 }
+
+                // return false;
             });
+        });
+    </script>
+    <!-- Footer -->
+    <footer class="page-footer font-small teal text- center pt-4">© 2019 Copyright <br>
 
-            return isValid;
-        }
-
-        //if everything is filled
-        if (validateForm() == true) {
-            //creates a new friend from the values submitted
-            var newFriend = {
-                name: $('#name').val().trim(),
-                profilePic: $('#photo').val().trim(),
-                scores: [
-                    $('#q1').val(),
-                    $('#q2').val(),
-                    $('#q3').val(),
-                    $('#q4').val(),
-                    $('#q5').val(),
-                    $('#q6').val(),
-                    $('#q7').val(),
-                    $('#q8').val(),
-                    $('#q9').val(),
-                    $('#q10').val(),
-                ]
-            };
-
-            //Grabs current URL of website
-            var currentURL = window.location.origin;
-
-            //AJAX posts the data to friends API.
-            $.post(currentURL + "/api/friends", newFriend, function(data) {
-                //Grab the result from the AJAX post so that the best match's name and photo are displayed.
-                $("#matchName").text(data.name);
-                $("#matchPic").attr("src", data.profilePic);
-
-            });
-            // Show the modal with the best match
-                $('.modal').modal();
-
-            //clear form after submission
-            $('#name').val("");
-            $('#photo').val("");
-            $('#q1').val("");
-            $('#q2').val("");
-            $('#q3').val("");
-            $('#q4').val("");
-            $('#q5').val("");
-            $('#q6').val("");
-            $('#q7').val("");
-            $('#q8').val("");
-            $('#q9').val("");
-            $('#q10').val("");
-        } else {
-            alert("Please fill out ALL fields before submitting survey!")
-        }
-
-        // return false;
-    });
-});
-</script>
-<!-- Footer -->
-<footer class="page-footer font-small teal text- center pt-4">© 2019 Copyright <br>
-
-	<!-- Content -->
-	<h5 class="text-uppercase font-weight-bold"></h5>
-	<p>Curious to get your match?</p>
+        <!-- Content -->
+        <h5 class="text-uppercase font-weight-bold"></h5>
+        <p>Curious to get your match?</p>
 
 
 
 
 
-</footer>
+    </footer>
 </body>
 
 </html>
